# StellariumWiimotePlugin

./: AUTHORS  CMakeLists.txt  ChangeLog  README  wiimotePlugin.qrc
src/: CMakeLists.txt  WiimotePlugin.cpp  WiimotePlugin.hpp
src/gui/: StelDialogWiimotePlugin.cpp  StelDialogWiimotePlugin.hpp  WiimotePluginWindow.cpp  WiimotePluginWindow.hpp  wiimotePluginDialogWindow.ui
src/wiimote/: angles.cpp  angles.h  bigdecimal.cpp  bigdecimal.h  cwiidconnectionworker.cpp  cwiidconnectionworker.h  wiimote.cpp  wiimote.h  wiimote_messages.cpp  wiimote_messages.h  wiimotemanager.cpp  wiimotemanager.h
